@@ -11,6 +11,12 @@
 
 Changes:
 --------
+- 2017/01/05 (3.00.0) - BREAKING CHANGE: The previous color picker API was broken
+                        because of conversions between float and byte color representation.
+                        Color pickers now use floating point values to represent
+                        HSV values. To get back the old behavior I added some additional
+                        color conversion functions to cast between nk_color and
+                        nk_colorf.
 - 2017/12/23 (2.00.7) - Fixed small warning
 - 2017/12/23 (2.00.7) - Fixed nk_edit_buffer behavior if activated to allow input
 - 2017/12/23 (2.00.7) - Fixed modifyable progressbar dragging visuals and input behavior
